--- a/Alan Ai Projects/Actual Flapship Project/Survival.html
+++ b/Alan Ai Projects/Actual Flapship Project/Survival.html
@@ -168,7 +168,7 @@
 					<p>This game is a fast paced survival style game where you loot chests and try to kill your fox enemies. This game is infinite and your objective is to get the most amount of enemies killed as possible!</p>
 				</details>
 				
-				<h3 class="two"><a href="Home.html">Voice Games</a></h3>
+				<h3 class="two"><a href="home.html">Voice Games</a></h3>
 			</div>
 		</div>
 		
